# panorama

./: .gitignore  .gitmodules  CMakeLists.txt  README.markdown  appaccumulator.cpp  appaccumulator.h  application.cpp  application.h  applicationfiltermethods.cpp  applicationfiltermethods.h  applicationfiltermodel.cpp  applicationfiltermodel.h  applicationmodel.cpp  applicationmodel.h  configuration.cpp  default.qrc  desktopfile.cpp  desktopfile.h  iconfinder.h  mainwindow.cpp  mainwindow.h  panorama.pro  panoramaui.cpp  panoramaui.h  root.qml  settings.cfg  textfile.h
contrib/: CMakeLists.txt  run.sh
controls/: controls.pro
controls/control/: control.pro
controls/control-plugins/: control-plugins.pro
controls/control-plugins/kmixvolume/: kmixvolume.pro
controls/control/include/: concept.h  control.h  controlplugin.h
controls/control/src/: concept.cpp  control.cpp
core/: CMakeLists.txt
core/qrc/: default.qrc
core/src/: main.cpp  mainwindow.cpp  mainwindow.h
include/: panoramaconfig.h.in  panoramainternal.h
interfaces/Colors/: ui.qml
interfaces/Colors/qml/: SelectionIcon.qml  TextStyle.qml  parser.js
interfaces/Consolidation/: ActionQueue.qml  Button.qml  Clock.qml  FilterDialog.qml  InstallDialog.qml  PackageDelegate.qml  PackageDetails.qml  PreloadedGridView.qml  RemoveDialog.qml  UpgradeDialog.qml  ui.qml
interfaces/Default/: ui.qml
interfaces/Default/pages/: Applications.qml
interfaces/Magma/: ui.qml
interfaces/MilkyTest/: PackageDelegate.qml  UpgradeDialog.qml  ui.qml
interfaces/PMenu/: skin.cfg  ui.qml
interfaces/PMenu/qml/: PositionedImage.qml  PositionedText.qml  SelectionIcon.qml  TextStyle.qml  text.js
interfaces/Simplicity/: ui.qml
interfaces/Test/widgets/: Book.qml
interfaces/TestSuite/: ui.qml
panorama/: panorama.pro
panorama-control/control/: control.pro
panorama-control/control/include/: control.h  controlplugin.h
panorama-plugins/: panorama-plugins.pro
panorama-plugins/applications-plugin/: applications-plugin.pro
panorama-plugins/applications-plugin/src/: appaccumulator.h  application.cpp  applicationattached.cpp  applicationfiltermodel.h  applicationmodel.cpp  applicationmodel.h  applications.h  applicationsplugin.cpp  applicationsplugin.h  desktopfile.cpp  desktopfile.h  iconfinder.cpp  pndscanner.cpp
panorama-plugins/controls-plugin/: controls-plugin.pro
panorama-plugins/controls-plugin/src/: controlsplugin.cpp  controlsplugin.h  controlwidget.cpp  controlwidget.h
panorama-plugins/milky-plugin/: milky-plugin.pro
panorama-plugins/milky-plugin/libjansson/: jansson_config.h  libjansson.pro
panorama-plugins/milky-plugin/libmilky/: libmilky.pro
panorama-plugins/milky-plugin/plugin/: plugin.pro
panorama-plugins/pandora-plugin/: pandora-plugin.pro
panorama-plugins/pandora-plugin/src/: pandora.cpp  pandoraattached.cpp  pandoraattached.h  pandoraeventlistener.cpp  pandoraeventsource.h  pandoraplugin.cpp
panorama-plugins/settings-plugin/: settings-plugin.pro
panorama-plugins/settings-plugin/src/: configuration.cpp  configuration.h  settingshive.cpp  settingsplugin.cpp
panorama-plugins/systeminformation-plugin/: systeminformation-plugin.pro
panorama-plugins/systeminformation-plugin/src/: systeminformation.cpp  systeminformation.h  systeminformationattached.cpp  systeminformationplugin.cpp
panorama-plugins/textfile-plugin/: textfile-plugin.pro
panorama-plugins/textfile-plugin/src/: textfile.cpp  textfile.h  textfileplugin.cpp  textfileplugin.h
panorama-plugins/ui-plugin/: ui-plugin.pro
panorama-plugins/ui-plugin/src/: panoramaui.cpp  panoramaui.h  uiplugin.h
panorama/qrc/: default.qrc  root.qml  settings.cfg
panorama/src/: appaccumulator.cpp  appaccumulator.h  application.h  applicationattached.cpp  applicationattached.h  applicationfiltermethods.h  applicationfiltermodel.cpp  applicationfiltermodel.h  applicationmodel.h  applications.cpp  configuration.cpp  configuration.h  constants.h  desktopfile.cpp  desktopfile.h  iconfinder.cpp  iconfinder.h  main.cpp  mainwindow.cpp  mainwindow.h  pandora.cpp  pandora.h  pandoraattached.cpp  pandoraattached.h  pandoraeventlistener.cpp  pandoraeventlistener.h  pandoraeventsource.cpp  pandoraeventsource.h  panoramaui.cpp  panoramaui.h  pndscanner.h  runtime.cpp  runtime.h  setting.cpp  setting.h  settingshive.cpp  settingshive.h  systeminformation.cpp  systeminformation.h  textfile.cpp  (+1 more)
plugins/: CMakeLists.txt
plugins/applications/: CMakeLists.txt
plugins/applications/src/: appaccumulator.cpp  appaccumulator.h  applicationattached.cpp  applicationfiltermethods.cpp  applicationfiltermethods.h  applicationfiltermodel.cpp  applicationfiltermodel.h  applicationmodel.cpp  applicationmodel.h  iconfinder.cpp  pnd.h  pndscanner.h
plugins/metadata/Panorama/Milky/: qmldir
plugins/pandora/: CMakeLists.txt
plugins/pandora/src/: pandoraattached.cpp  pandorakeyevent.cpp  pandorakeyevent.h  pandoraplugin.h
plugins/settings/: CMakeLists.txt
plugins/settings/src/: configuration.cpp  setting.cpp  setting.h  settingshive.cpp  settingshive.h  settingsplugin.h  settingssource.cpp  settingssource.h
plugins/systeminformation/: CMakeLists.txt
plugins/systeminformation/src/: systeminformationattached.cpp  systeminformationattached.h  systeminformationplugin.h
plugins/textfile/: CMakeLists.txt
plugins/textfile/src/: textfileplugin.cpp
plugins/ui/: CMakeLists.txt
plugins/ui/src/: panoramaui.cpp  panoramaui.h  uiplugin.cpp
qrc/: default.qrc  settings.cfg
src/: appaccumulator.cpp  appaccumulator.h  application.cpp  application.h  applicationfiltermethods.cpp  applicationfiltermethods.h  applicationfiltermodel.cpp  applicationfiltermodel.h  applicationmodel.cpp  applicationmodel.h  configuration.cpp  configuration.h  constants.h  desktopfile.cpp  desktopfile.h  iconfinder.cpp  iconfinder.h  main.cpp  mainwindow.cpp  mainwindow.h  panoramaui.cpp  panoramaui.h  pnd.cpp  pnd.h  pndscanner.cpp  pndscanner.h  setting.cpp  setting.h  settingshive.cpp  settingshive.h  sysinfo.cpp  sysinfo.h  systeminformation.cpp  systeminformation.h  textfile.cpp
(+20 files in other folders)
