PROJECT(UI)

FIND_PACKAGE(Qt4 REQUIRED)
SET(QT_USE_QTDECLARATIVE TRUE)

SET(ui_SOURCES
    src/uiplugin.cpp
    src/panoramaui.cpp)

SET(ui_HEADERS
    src/uiplugin.h
    src/panoramaui.h)

QT4_WRAP_CPP(ui_HEADERS_MOC ${ui_HEADERS})

INCLUDE(${QT_USE_FILE})
ADD_DEFINITIONS(${QT_DEFINITIONS} -DQT_PLUGIN -DQT_NO_DEBUG -DQT_SHARED)
ADD_LIBRARY(ui MODULE ${ui_SOURCES} ${ui_HEADERS_MOC})
INSTALL(TARGETS ui DESTINATION ${PLUGINDIR}/Panorama/UI)

